--- a/_listings/apis.html
+++ b/_listings/apis.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Streamdata.io API Gallery - Broadcast
+title: Streamdata.io API Gallery - Broadcasts
 ---
 
 {% assign listing_object = site.listings %}
